# powerplant-code-challenge-engie

./: Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
application/: api.py  calculator.py  main.py  models.py
tests/: test_calculator.py
