[project]
name = "powerplant-coding-challenge"
version = "0.1.0"
description = ""
authors = [
    {name = "FranMartinezLopez",email = "francisco.martinez@inforyde.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic (>=2.12.5,<3.0.0)",
    "pytest (>=9.0.1,<10.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
    { include = "application", from = "." },
]


[tool.pytest.ini_options]
testpaths = ["tests"]
